# das

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  TODO.md  common.pri  emulator.pro  full.pro  gui.pro  raspberry.pro  server.pro
client/: README.md  TODO.md  checker.cpp  checker.h  checker_manager.cpp  checker_manager.h  client.pro  dbus_object.cpp  dbus_object.h  id_timer.cpp  id_timer.h  log_save_controller.cpp  log_save_controller.h  log_value_save_timer.cpp  log_value_save_timer.h  main.cpp  main.qrc  pack_sender.h  structure_synchronizer.cpp  structure_synchronizer.h  worker.cpp  worker.h  worker_structure_synchronizer.cpp  worker_structure_synchronizer.h
client/Database/: db_log_helper.cpp  db_log_helper.h
client/ForServer/: after-mysql  dump.sh  init.sh  initial_data.json  ru.deviceaccess.Das.conf
client/Network/: client_protocol.cpp  client_protocol.h  client_protocol_latest.cpp  client_protocol_latest.h  log_sender.cpp  log_sender.h  net_proto_iface.h
client/Scripts/: dig_status_class.cpp  dig_status_class.h  dig_status_prototype.cpp  dig_status_prototype.h  paramgroupclass.cpp  paramgroupclass.h  paramgroupprototype.cpp  paramgroupprototype.h  scripted_scheme.cpp  scripted_scheme.h
doc/: color-scheme  description.odt  install_database.txt  qtserialbus.patch  work_scheme.xcf
gui/: .gitignore  README.md  global.cpp  global.h  gui.pro  main.cpp  main.qml  main.qrc  serverapicall.cpp  serverapicall.h  websocketclient.cpp  websocketclient.h
helpz/: README.md  generate_version.sh  helpz.pro  helpz_install.pri  helpz_version.pri
lib/: .gitignore  README.md
server/: .gitignore  CMakeLists.txt  README.md  TODO.md  base_synchronizer.cpp  base_synchronizer.h  command_line_parser.cpp  command_line_parser.h  dbus_object.cpp  dbus_object.h  log_manager.cpp  log_manager.h  log_saver.cpp  log_saver.h  log_synchronizer.cpp  log_synchronizer.h  main.cpp  server.h  server.pro  server_protocol.cpp  server_protocol.h  server_protocol_base.cpp  server_protocol_base.h  structure_synchronizer.cpp  structure_synchronizer.h  thread_iface.h  work_object.cpp  work_object.h  worker.cpp  worker.h
server/database/: db_scheme.cpp  db_scheme.h  db_thread_manager.cpp  db_thread_manager.h
server/log_saver/: log_saver.cpp  log_saver.h  log_saver_base.cpp  log_saver_base.h  log_saver_cache.h  log_saver_cache_data.h  log_saver_config.h  log_saver_controller.cpp  log_saver_controller.h  log_saver_data.h  log_saver_def.h  log_saver_helper.h  log_saver_layers_filler.cpp  log_saver_layers_filler.h  log_saver_manager.cpp  log_saver_manager.h
server/old/: log_synchronizer_2_0.cpp  log_synchronizer_2_0.h  log_synchronizer_2_1.cpp  log_synchronizer_2_1.h  server_protocol_2_0.cpp  server_protocol_2_0.h  server_protocol_2_1.cpp  server_protocol_2_1.h  structure_synchronizer_2_1.cpp  structure_synchronizer_2_1.h  structure_synchronizer_base_2_1.cpp  structure_synchronizer_base_2_1.h
server/protocol/: CMakeLists.txt
telegrambot/: README.md  bot.cpp  bot.h  commands.list  dbus_handler.cpp  dbus_handler.h  dbus_webapi_interface.cpp  dbus_webapi_interface.h  informer.cpp  informer.h  main.cpp  rest_ctrl.h  smtp_client.cpp  smtp_client.h  telegrambot.pro  worker.cpp  worker.h
webapi/: .gitignore  LICENSE  README.md  dbus_handler.cpp  dbus_handler.h  dbus_object.cpp  dbus_object.h  main.cpp  webapi.pro  webcommand.cpp  webcommand.h  websocket.cpp  websocket.h  worker.cpp  worker.h
(+524 files in other folders)
